--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <script src="testing.js" defer></script>
 </head>
 <body>
-    <script src="rps.js"></script>
+    <div id="container"></div>
+    <button id="button1">Click Me</button>
 </body>
 </html>
